<resources>
    <string name="app_name">ProjetP42</string>
    <string name="title_home">Livres</string>
    <string name="title_dashboard">Auteurs</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Livres">Livres</string>
    <string name="title_Auteurs">Auteurs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">titre</string>
    <string name="author">id de l\'auteur</string>
    <string name="ajouter_un_livre">ajouter un livre</string>
    <string name="titre">titre</string>
    <string name="auteur">auteur</string>
    <string name="tag">tag</string>
    <string name="filtrer">filtrer</string>
    <string name="publication_year">date de publication </string>
    <string name="add_book" />
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="BoutonAjout">Ajouter</string>
    <string name="livre_1_auteur">Livres de cette auteur:</string>
    <string name="livre_de_cet_auteur">livre de cet auteur</string>
    <string name="votre_commentaire">votre commentaire...</string>
    <string name="votre_nom">votre nom...</string>
    <string name="poster">commenter !</string>
    <string name="votre_note">votre note\n</string>
    <string name="livres_de_cet_auteur">livres de cet auteur :</string>

    <string-array name="order_array">
        <item>title</item>
        <item>publication_year</item>
    </string-array>
</resources>