<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.book.addRatingFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/rating_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/votre_note"
        android:inputType="text"
        android:padding="16dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rating_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/votre_nom"
        android:inputType="text"
        android:padding="16dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/rating_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poster"/>

</LinearLayout>