<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.book.AddBookFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:autofillHints="text"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/publication_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:autofillHints="text"
        android:hint="@string/publication_year"
        android:inputType="number"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/auteurSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" />

    <Spinner
        android:id="@+id/tagSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/add_book"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:text="@string/BoutonAjout" />


</LinearLayout>